--- a/FE/src/app/customers/customer.component.html
+++ b/FE/src/app/customers/customer.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" style="margin-right: auto; margin-left: auto;">
   <blockquote class="blockquote ml-5">
-    <h2>VuFE-MiniShop</h2>
+    <h2>NGUYEN QUOC VU - FE - MiniShop</h2>
   </blockquote>
   <div class="main-form">
     <div class="row">
@@ -8,7 +8,9 @@
         <div class="row">
           <div class="col col-12 input-form-cls">
             <div class="row row-input-form">
-              <div class="col col-6"><h4>Shop</h4></div>
+              <div class="col col-6">
+                <h4>Shop</h4>
+              </div>
               <div class="col col-6">
                 <h6 class="total-rows">Row(s): {{shopList.length}}</h6>
               </div>
@@ -23,9 +25,9 @@
               </div>
             </div>
           </div>
-          <div class="col col-12 text-right">		
+          <div class="col col-12 text-right">
             <i class="fa fa-plus-square-o" (click)="onAddShop()" style="font-size:2em;"></i>
-            <i class="fa fa-trash-o" (click)="onDeleteShop()" style="font-size:2.2em;"></i>
+            <i class="fa fa-trash-o" (click)="onDeleteShop()" style="font-size:2em;"></i>
             <i class="fa fa-random" (click)="onAddShopRandom()" style="font-size:2em;"></i>
           </div>
           <div class="col col-12 grid-cls">
@@ -34,14 +36,16 @@
                 <table class="table table-hover table-border table-striped">
                   <thead class="p-3 mb-2 bg-success text-white">
                     <tr>
-                      <th scope="col" width="10%"><input class="form-check-input" type="checkbox" (click)="onCheckAllShop($event)"></th>
+                      <th scope="col" width="10%"><input class="form-check-input" type="checkbox"
+                          (click)="onCheckAllShop($event)"></th>
                       <th width="45%">Name</th>
                       <th width="45%">Location</th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr *ngFor="let shop of shopList; let i = index;">
-                      <th scope="row" width="10%"><input class="form-check-input" type="checkbox" [(ngModel)]="shop.Checked"></th>
+                      <th scope="row" width="10%"><input class="form-check-input" type="checkbox"
+                          [(ngModel)]="shop.Checked"></th>
                       <td width="45%">{{ shop.Name }}</td>
                       <td width="45%">{{ shop.Location }}</td>
                     </tr>
@@ -56,7 +60,9 @@
         <div class="row">
           <div class="col col-12 input-form-cls">
             <div class="row row-input-form">
-              <div class="col col-6"><h4>Product</h4></div>
+              <div class="col col-6">
+                <h4>Product</h4>
+              </div>
               <div class="col col-6">
                 <h6 class="total-rows">Row(s): {{productList.length}}</h6>
               </div>
@@ -67,18 +73,19 @@
                 <input placeholder="Name" [(ngModel)]="inputProduct.Name">
               </div>
               <div class="col col-12">
-                <input placeholder="Price" type="number" min="0" (input)="checkValue($event)" [(ngModel)]="inputProduct.Price">
+                <input placeholder="Price" type="number" min="0" (input)="checkValueValid($event)"
+                  [(ngModel)]="inputProduct.Price">
               </div>
               <div class="col col-12">
                 <ng-multiselect-dropdown [name]="'1'" [settings]="dropdownSettingTables" [data]="shopList"
-                [placeholder]="'Shop'" [(ngModel)]="inputProduct.Shops">
+                  [placeholder]="'Shop'" [(ngModel)]="inputProduct.Shops">
                 </ng-multiselect-dropdown>
               </div>
             </div>
           </div>
           <div class="col col-12 text-right">
             <i class="fa fa-plus-square-o" (click)="onAddProduct()" style="font-size:2em;"></i>
-            <i class="fa fa-trash-o" (click)="onDeleteProduct()" style="font-size:2.2em;"></i>
+            <i class="fa fa-trash-o" (click)="onDeleteProduct()" style="font-size:2em;"></i>
             <i class="fa fa-random" (click)="onAddProductRandom()" style="font-size:2em;"></i>
           </div>
           <div class="col col-12 grid-cls">
@@ -87,7 +94,8 @@
                 <table class="table table-hover table-border table-striped">
                   <thead class="p-3 mb-2 bg-success text-white">
                     <tr>
-                      <th scope="col" width="10%"><input class="form-check-input" type="checkbox" (click)="onCheckAllProduct($event)"></th>
+                      <th scope="col" width="10%"><input class="form-check-input" type="checkbox"
+                          (click)="onCheckAllProduct($event)"></th>
                       <th width="30%">Name</th>
                       <th width="30%">Price</th>
                       <th width="30%">Shop</th>
@@ -95,7 +103,8 @@
                   </thead>
                   <tbody>
                     <tr *ngFor="let product of productList; let i = index;">
-                      <th scope="row" width="10%"><input class="form-check-input" type="checkbox" [(ngModel)]="product.Checked"></th>
+                      <th scope="row" width="10%"><input class="form-check-input" type="checkbox"
+                          [(ngModel)]="product.Checked"></th>
                       <td width="30%">{{ product.Name }}</td>
                       <td width="30%">{{ product.Price }}</td>
                       <td width="30%">{{ product.ShopName }}</td>
@@ -111,7 +120,9 @@
         <div class="row">
           <div class="col col-12 input-form-cls">
             <div class="row row-input-form">
-              <div class="col col-6"><h4>Customer</h4></div>
+              <div class="col col-6">
+                <h4>Customer</h4>
+              </div>
               <div class="col col-6">
                 <h6 class="total-rows">Row(s): {{customerList.length}}</h6>
               </div>
@@ -122,27 +133,28 @@
                 <input placeholder="Name" [(ngModel)]="inputCustomer.Name">
               </div>
               <div class="col col-6">
-                <input  placeholder="Dob" type="date" [(ngModel)]="inputCustomer.Dob">
+                <input placeholder="Dob" type="date" [(ngModel)]="inputCustomer.Dob">
               </div>
               <div class="col col-12">
                 <input placeholder="Email" [(ngModel)]="inputCustomer.Email">
               </div>
               <div class="col col-6">
                 <ng-multiselect-dropdown [name]="'2'" [settings]="dropdownSettingCustomers" [data]="shopList"
-                [placeholder]="'Shop'" [(ngModel)]="inputCustomer.Shops" (onSelect)="onCustomerShopSelect($event)"
-                (onSelectAll)="onCustomerShopSelectAll($event)">
+                  [placeholder]="'Shop'" [(ngModel)]="inputCustomer.Shops" (onSelect)="onCustomerShopSelect($event)"
+                  (onSelectAll)="onCustomerShopSelectAll($event)">
                 </ng-multiselect-dropdown>
               </div>
               <div class="col col-6">
                 <ng-multiselect-dropdown [name]="'3'" [settings]="dropdownSettingCustomers" [data]="customerProductList"
-                [placeholder]="'Product'" [(ngModel)]="inputCustomer.Products" [disabled]="!inputCustomer.Shops || !inputCustomer.Shops.length">
+                  [placeholder]="'Product'" [(ngModel)]="inputCustomer.Products"
+                  [disabled]="!inputCustomer.Shops || !inputCustomer.Shops.length">
                 </ng-multiselect-dropdown>
               </div>
             </div>
           </div>
           <div class="col col-12 text-right">
             <i class="fa fa-plus-square-o" (click)="onAddCustomer()" style="font-size:2em;"></i>
-            <i class="fa fa-trash-o" (click)="onDeleteCustomer()" style="font-size:2.2em;"></i>
+            <i class="fa fa-trash-o" (click)="onDeleteCustomer()" style="font-size:2em;"></i>
             <i class="fa fa-random" (click)="onAddCustomerRandom()" style="font-size:2em;"></i>
           </div>
           <div class="col col-12 grid-cls">
@@ -151,7 +163,8 @@
                 <table class="table table-hover table-border table-striped">
                   <thead class="p-3 mb-2 bg-success text-white">
                     <tr>
-                      <th scope="col" width="8%"><input class="form-check-input" type="checkbox" (click)="onCheckAllCustomer($event)"></th>
+                      <th scope="col" width="8%"><input class="form-check-input" type="checkbox"
+                          (click)="onCheckAllCustomer($event)"></th>
                       <th width="18%">Name</th>
                       <th width="20%">DOB</th>
                       <th width="17%">Email</th>
@@ -161,7 +174,8 @@
                   </thead>
                   <tbody>
                     <tr *ngFor="let customer of customerList; let i = index;">
-                      <th scope="row" width="8%"><input class="form-check-input" type="checkbox" [(ngModel)]="customer.Checked"></th>
+                      <th scope="row" width="8%"><input class="form-check-input" type="checkbox"
+                          [(ngModel)]="customer.Checked"></th>
                       <td width="18%">{{ customer.Name }}</td>
                       <td width="20%">{{ customer.Dob }}</td>
                       <td width="17%">{{ customer.Email }}</td>
@@ -179,14 +193,20 @@
         <div class="row">
           <div class="col col-12">
             <div class="row row-input-form">
-              <div class="col col-6"><h4>Data</h4></div>
+              <div class="col col-6">
+                <h4>Data</h4>
+              </div>
               <div class="col col-6">
                 <h6 class="total-rows">Row(s): {{sortedList?.length || 0}}</h6>
               </div>
-              <div class="col col-12" style="text-align: right;">
-                <button class="btn btn-info add-btn" (click)="onSave()">Add</button>
-                <button class="btn btn-success add-btn" (click)="onLoad()">Search</button>
-                <button class="btn btn-danger add-btn" (click)="onClear()">Clear Data</button>
+              <div class="col col-7">
+                <input placeholder="customer name" [(ngModel)]="strCustomer">                
+                <input placeholder="product name" [(ngModel)]="strProduct">
+              </div>
+              <div class="col col-5" style="text-align: right;">
+                <button class="btn btn-success add-btn" (click)="onLoad()">Find</button>
+                <button class="btn btn-info add-btn" (click)="onSave()">Save</button>
+                <button class="btn btn-danger add-btn" (click)="onClear()">Clear</button>
               </div>
             </div>
           </div>
